# UPR-AI

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
artifacts/logs/: fallback_logs.json
config/: data.yaml  default_paths.yaml  logging_config.yaml
docs/: 000-project-structure.md  001-developer-guide.md  006-mlops_design.md
docs/adr/: 000-tech-stack.md  001-ci-pipeline.md  002-modular-pipeline-architecture.md  003-logging-strategy.md  004-error-handling-strategy.md  005-configuration-management.md  006-mlops.md  others.md
src/upr_ai/: data_loader.py  smoke.py
src/upr_ai/utils/: Exception.py  config.py  logger.py
tests/unit/: config_test.py  exception_test.py  logger_test.py  test_smoke.py
