[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "upr_ai"
version = "1.0.0"
description = "ML project for predicting student grade in a specific course"
requires-python = ">=3.12"

dependencies = [
    "numpy==2.3.1",
    "pandas==2.3.1",
    "scikit-learn==1.7.1",
    "matplotlib==3.10.5",
    "seaborn==0.13.2",
    "python-dotenv==1.1.1",
    "tqdm==4.67.1",
]

[project.optional-dependencies]
dev = [
    "pytest==8.4.1",
    "pytest-cov==6.2.1",
    "black==25.1.0",
    "ruff==0.12.8",
    "mypy==1.17.1",
    "jupyter==1.1.1",
    "ipykernel==6.30.1",
    "bandit==1.7.10",
    "pip-audit==2.7.3",
]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true